# NetMonitor

./: .dockerignore  .env_template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
nginx/: default.conf
project_core/: remainders.txt
project_core/apps/dogma_infoseq/: admin.py  apps.py  forms.py  inlines.py  models.py  resources.py  views.py
project_core/apps/dogma_infoseq/migrations/: 0001_initial.py  0002_initial.py  0003_rename_name_infosequsercertficatemodel_title.py  0004_infosequsercertficatemodel_country_and_more.py  0005_alter_infosequsercertficatemodel_country_and_more.py  0006_alter_infosequsercertficatemodel_country_and_more.py  0007_alter_infosequsercertficatemodel_country_and_more.py  0008_alter_infosequsercertficatemodel_state.py  0009_alter_infosequsercertficatemodel_country_and_more.py  0010_infosequsercertficatemodel_for_ipad_and_more.py  0011_alter_infosequsercertficatemodel_create_at.py  0012_alter_infosequsercertficatemodel_for_ipad_and_more.py  (+4 more)
project_core/apps/dogma_it/: admin.py  apps.py  models.py
project_core/apps/dogma_users/: admin.py  apps.py  forms.py  manager.py  models.py  resources.py
project_core/repository/: certification_center.py  device_center.py  employee_center.py  incoming_http_server.py  notification_center.py  report_center.py  test.py
project_core/templates/admin/: certificate_change_form.html  certificate_list_view.html  employee_list_view.html
project_core/templates/visits/: visits.html
project_core/utils/: choices.py  dto.py  formatters.py
project_core/web_core/: settings.py  urls.py
(+6 files in other folders)
