[tool.poetry]
name = "netmonitor"
version = "0.1.0"
description = ""
authors = ["TrashPanda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-debug-toolbar = "^4.1.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
transliterate = "^1.10.2"
discord-webhook = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

